# plonky2

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: lib.rs
field/: Cargo.toml
field/src/: goldilocks_field.rs  lib.rs  secp256k1_base.rs  secp256k1_scalar.rs  types.rs
field/src/extension/: quadratic.rs  quartic.rs  quintic.rs
maru-stark/: Cargo.toml  out.txt
maru-stark/src/: fibonacci_stark.rs  get_challenges.rs  lib.rs  permutation.rs  proof.rs  prover.rs  public_memory.rs  stark.rs  stark_testing.rs  util.rs  vanishing_poly.rs  vars.rs  verifier.rs
maru-stark/src/cpu/: alu.rs  alu_recursive.rs  layout.rs  maru_stark.rs  mod.rs
maru-stark/tests/: fib.rs  mod.rs
merkle-stark/: Cargo.toml  out.txt
merkle-stark/benches/: sha256_compression.rs
merkle-stark/examples/: time_sha256_compression.rs
merkle-stark/src/: all_stark.rs  cross_table_lookup.rs  get_challenges.rs  lib.rs  merkle_stark.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  util.rs  vanishing_poly.rs  verifier.rs
merkle-stark/src/sha256_stark/: constants.rs  constraints.rs  generation.rs  layout.rs  mod.rs
merkle-stark/src/tree_stark/: generation.rs  layout.rs  mod.rs
plonky2/: Cargo.toml
plonky2/examples/: bench_recursion.rs  bench_verifier.rs  buffer_verifier_size_comparison.rs
plonky2/src/: lib.rs
plonky2/src/buf_verifier/: README.md  mod.rs  serialization.rs
plonky2/src/buffer_verifier/: README.md  buf.rs  circuit_buf.rs  fri_verifier.rs  get_challenges.rs  mod.rs  plonk_verifier.rs  proof_buf.rs  serialization.rs  vanishing_poly.rs  verifier.rs
plonky2/src/fri/: challenges.rs  oracle.rs  proof.rs  prover.rs  recursive_verifier.rs  reduction_strategies.rs  structure.rs
plonky2/src/gates/: arithmetic_base.rs  arithmetic_extension.rs  assert_le.rs  gate.rs  (+14 more)
poseidon-standalone/: Cargo.toml
poseidon-standalone/src/: lib.rs  poseidon.rs  poseidon_goldilocks.rs
solana-verifier/: Cargo.toml
solana-verifier/examples/: test_in_solana_mock_runtime.rs
solana-verifier/src/: lib.rs
solana_verifier/: Cargo.toml
solana_verifier/src/: README.md  buf.rs  circuit_buf.rs  fri_verifier.rs  serialization.rs  vanishing_poly.rs  verifier.rs
starky/src/: config.rs  fibonacci_stark.rs  get_challenges.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  stark_testing.rs  util.rs  vanishing_poly.rs  verifier.rs
starky2/: Cargo.toml  README.md  readme.md
starky2/benches/: sha256_compression.rs
starky2/examples/: depth_5_merkle_stark_sha2.rs  keccak256_all_stark.rs  time_sha2_compression.rs
starky2/src/: all_stark.rs  config.rs  constraint_consumer.rs  cross_table_lookup.rs  get_challenges.rs  lib.rs  lookup.rs  permutation.rs  proof.rs  prover.rs  recursive_verifier.rs  ro_memory.rs  stark.rs  stark_testing.rs  util.rs  vanishing_poly.rs  vars.rs  verifier.rs
system_zero/src/: lib.rs  memory.rs  system_zero.rs
util/src/: lib.rs
waksman/: Cargo.toml
(+104 files in other folders)
