[package]
name = "maru-stark"
description = "version of starky with some extra stuff specifically for the maru runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { path = "../plonky2" }
plonky2_util = { path = "../util" }
anyhow = "1.0.40"
env_logger = "0.9.0"
itertools = "0.10.0"
log = "0.4.14"
rayon = "1.5.1"
arrayref = "0.3.6"

[dev-dependencies]
maru_air = { path = "../../maru/air" }
maru_utils = { path = "../../maru/utils" }
