[package]
name = "merkle-stark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2" }
plonky2_util = { path = "../util" }
anyhow = "1.0.40"
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.14"
once_cell = "1.13.0"
rayon = "1.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
arrayref = "0.3.6"

[dev-dependencies]
criterion = "0.3.5"
sha2 = { version = "0.10.2", features = ["compress"] }
generic-array = "0.14.5"
plonky2_field = { path = "../field" }

[profile.release]
lto = "fat"
opt-level = 3
